6/28/2022 - Fix title sizes
Title sizes were too big for iPhone 8 Plus

--- a/style.css
+++ b/style.css
@@ -103,11 +103,11 @@ h6 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 2.4rem;
 }
 
 h3 {
